--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Body</h1>
-    <a href="E:\JavaScript\01-color-flipper\index.html">Project 1</a>
+    <a href="01-color-flipper\index.html">Project 1</a>
   </body>
 </html>
